# crossrs

./: LICENSE  README.md  setup.cfg
src/crossrs/app/commands/: delete.py  init.py  path.py  stats.py
src/crossrs/app/commands/study/: __init__.py  chooser.py  evaluator.py  explainer.py  interaction.py  updater.py
src/crossrs/asr/: __init__.py
src/crossrs/db/: __init__.py  models.py
src/crossrs/diff/: __init__.py  tokenizer.py
src/crossrs/utils/: openai.py  paths.py
tests/: test_crossrs.py
