[metadata]
name = crossrs
version = 0.2.0
author = Danylo Mysak
author_email = danmysak@gmail.com
description = Command-line tool for learning foreign languages through reverse translation of word-based sentences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danmysak/crossrs
project_urls =
    Bug Tracker = https://github.com/danmysak/crossrs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.13
install_requires =
    openai
    prompt_toolkit
    pydantic
    regex
    rich
    SQLAlchemy
    tqdm
    typer

[options.entry_points]
console_scripts =
    crossrs = crossrs.crossrs:app

[options.packages.find]
where = src
